; ModuleID = '/home/carl/AnghaBench/jq/src/extr_builtin.c_f_debug.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_builtin.c_f_debug.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @f_debug to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @f_debug(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32 (i8*, i32)*, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = bitcast i32 (i8*, i32)** %5 to i32 (i8*, i32)*
  %9 = call i32 @jq_get_debug_cb(i32* %7, i32 (i8*, i32)* %8, i8** %6)
  %10 = load i32 (i8*, i32)*, i32 (i8*, i32)** %5, align 8
  %11 = icmp ne i32 (i8*, i32)* %10, null
  br i1 %11, label %12, label %18

12:                                               ; preds = %2
  %13 = load i32 (i8*, i32)*, i32 (i8*, i32)** %5, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @jv_copy(i32 %15)
  %17 = call i32 %13(i8* %14, i32 %16)
  br label %18

18:                                               ; preds = %12, %2
  %19 = load i32, i32* %4, align 4
  ret i32 %19
}

declare dso_local i32 @jq_get_debug_cb(i32*, i32 (i8*, i32)*, i8**) #1

declare dso_local i32 @jv_copy(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
